# smallmath

./: CMakeLists.txt  Matrix.cpp  Matrix.hpp  README  Vector.hpp
math/: Constants.hpp  EulerAngles.cpp  EulerAngles.hpp  Matrix.cpp  Matrix.hpp  Quaternion.hpp  Vector.cpp  Vector.hpp
source/: CMakeLists.txt  EulerAngles.cpp
source/math/: CMakeLists.txt  Constants.hpp  EulerAngles.cpp  EulerAngles.hpp  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Vector.cpp  Vector.hpp
